Package Name Updated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Dagger2</string>
+    <string name="app_name">MyModule</string>
+    <string name="loading">Loading.. Please wait</string>
 </resources>
